--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "node scripts/dev.js",
+    "vite": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "format": "prettier --write --parser typescript \"packages/**/*.ts?(x)\""
@@ -12,6 +13,7 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "esbuild": "^0.14.47",
     "minimist": "^1.2.6",
