--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "vite": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "lint": "eslint --ext .ts packages/**/*.ts",
     "format": "prettier --write --parser typescript \"packages/**/*.ts?(x)\""
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "esbuild": "^0.14.47",
+    "eslint": "^7.7.0",
+    "eslint-plugin-jest": "26.1.5",
+    "jest": "^27.1.0",
     "minimist": "^1.2.6",
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
