--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,16 @@
     "outDir": "dist",
     "sourceMap": true,
     "target": "esnext",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
     "module": "esnext",
     "moduleResolution": "node",
+    "allowJs": false,
     "strict": true,
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
+    "removeComments": false,
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
