--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@types/jest": "^27.0.1",
     "@types/node": "^18.0.0",
     "@typescript-eslint/parser": "^5.23.0",
